Fix Bayesian network model class and relative path files for CSV data

--- a/notebooks/models/nlps/markov_chain_text_generator.ipynb
+++ b/notebooks/models/nlps/markov_chain_text_generator.ipynb
@@ -95,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A cat The Asian best choice another great job employee abt our\n"
+      "A cat soon to finding the premise immediately when it If the\n"
      ]
     }
    ],
@@ -310,11 +310,11 @@
     "    \n",
     "    # Define constants for CSV file paths\n",
     "    CSV_FILE_PATHS = [\n",
-    "        \"/Users/apple/Documents/Projects/Samhail/csv_datasets/markov_chain_impression_dataset.csv\",\n",
-    "        \"/Users/apple/Documents/Projects/Samhail/csv_datasets/reddit_social_media_comments.csv\",\n",
-    "        \"/Users/apple/Documents/Projects/Samhail/csv_datasets/twitter_social_media_comments.csv\",\n",
-    "        \"/Users/apple/Documents/Projects/Samhail/csv_datasets/imdb_movie_reviews.csv\",\n",
-    "        \"/Users/apple/Documents/Projects/Samhail/csv_datasets/dcat_train_data.csv\",\n",
+    "        \"../../../csv_datasets/markov_chain_impression_dataset.csv\",\n",
+    "        \"../../../csv_datasets/reddit_social_media_comments.csv\",\n",
+    "        \"../../../csv_datasets/twitter_social_media_comments.csv\",\n",
+    "        \"../../../csv_datasets/imdb_movie_reviews.csv\",\n",
+    "        \"../../../csv_datasets/dcat_train_data.csv\",\n",
     "    ]\n",
     "               \n",
     "    def _generate(self, prompt, length=10):\n",
