Fixed BERT scenarios

--- a/notebooks/models/nlps/markov_chain_text_generator.ipynb
+++ b/notebooks/models/nlps/markov_chain_text_generator.ipynb
@@ -90,19 +90,25 @@
     "**🔹 Summary**\n",
     "--------------\n",
     "\n",
-    "✅ **Markov Chains** model sequences where the **future state depends only on the present state**.✅ Developed by **Andrey Markov in 1906** to analyze **dependent random events**.✅ Applied in **AI, NLP, finance, search engines, and biology**.✅ Used in **text prediction**, **weather forecasting**, and **speech recognition**."
+    "✅ **Markov Chains** model sequences where the **future state depends only on the present state**.\n",
+    "\n",
+    "✅ Developed by **Andrey Markov in 1906** to analyze **dependent random events**.\n",
+    "\n",
+    "✅ Applied in **AI, NLP, finance, search engines, and biology**.\n",
+    "\n",
+    "✅ Used in **text prediction**, **weather forecasting**, and **speech recognition**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A cat soon to finding the premise immediately when it If the\n"
+      "A cat but more factual errors The pink dress up or higher\n"
      ]
     }
    ],
@@ -405,7 +411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "3.12.7",
    "language": "python",
    "name": "python3"
   },
